crates/wac-parser/tests/resolution/fail/mismatched-enum-cases/foo/bar.wat
(component
  (instance (import "x")
    (type (enum "a" "b" "c"))
    (export "e" (type (eq 0)))
  )
)
